infrastructure/modules/alb/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-api-service
  namespace: app
  labels:
    app: document-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: document-api
