infrastructure/modules/alb/ingress-document.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: document-api-group
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/security-groups: <ALB_SG_ID>  # Replace with output from Terraform
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  rules:
    - http:
        paths:
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: document-api-service
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: document-api-service
                port:
                  number: 80
